[package]
name = "breeze-tool"
version = "0.1.0"
authors = ["Jonas Schievink <jonas@schievink.net>"]
description = "GUI tool for visualizing Breeze emulator internals"

[dependencies]
log = "0.3"
env_logger = "0.3"
clap = "2.0"
lazy_static = "0.2"
gtk = { version = "=0.0.7", features = ["v3_6"] }
gdk-pixbuf = "=0.0.1"
gdk = "0.3"
breeze_core = { version = "0.1", git = "https://github.com/jonas-schievink/breeze-emu.git" }
breeze_frontends = { version = "0.1", git = "https://github.com/jonas-schievink/breeze-emu.git" }
